--- a/src/home.html
+++ b/src/home.html
@@ -407,7 +407,7 @@
                   </div>
                 </div>
                 <div class="column-aside__btn">
-                  <a href="./page-voice.html" class="button"><span class="button__text">View&nbsp;more</span></a>
+                  <a href="./page-voice.html" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
                 </div>
               </div>
               <div class="column-aside__campaign">
@@ -445,7 +445,7 @@
                   </li>
                 </ul>
                 <div class="column-aside__btn-2">
-                  <a href="./page-campaign.html" class="button"><span class="button__text">View&nbsp;more</span></a>
+                  <a href="./page-campaign.html" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
                 </div>
               </div>
               <div class="column-aside__archive">
@@ -618,7 +618,7 @@
               </div>
               <p class="contact__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn">
-                <a href="./page-contact.html" class="button"><span class="button__text">Contact&nbsp;us</span></a>
+                <a href="./page-contact.html" class="button" role="button"><span class="button__text">Contact&nbsp;us</span></a>
               </div>
             </div>
           </div>
