クラス名変更：top-○○ → layout-○○ 25.08.01

--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- サイトマップ -->
-      <div class="top-page-site-map page-site-map">
+      <div class="layout-page-site-map page-site-map">
         <div class="page-site-map__inner inner">
           <nav class="page-site-map__nav footer-nav">
             <div class="footer-nav__left-content footer-nav__left-content--width">
@@ -290,7 +290,7 @@
       </div>
 
       <!-- Contact -->
-      <section class="top-page-contact top-page-contact--site-map-page contact">
+      <section class="layout-page-contact layout-page-contact--site-map-page contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -333,7 +333,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
