--- a/src/page-voice.html
+++ b/src/page-voice.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- お客様の声 -->
-      <div class="top-page-campaign page-campaign">
+      <div class="layout-page-campaign page-campaign">
         <div class="page-campaign__inner inner">
           <div class="page-campaign__category campaign-category">
             <a href="#" class="campaign-category__link is-active">All</a>
@@ -340,7 +340,7 @@
         </div>
       </div>
 
-      <div class="top-pagenavi top-pagenavi--voice-page">
+      <div class="layout-pagenavi layout-pagenavi--voice-page">
         <div class="wp-pagenavi">
           <a class="previouspostslink" rel="prev" href="#"></a>
           <span class="current">1</span>
@@ -354,7 +354,7 @@
       </div>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -397,7 +397,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
