--- a/src/single.html
+++ b/src/single.html
@@ -210,7 +210,7 @@
       </div>
 
       <!-- ブログ詳細 -->
-      <div class="top-two-column two-column">
+      <div class="layout-two-column two-column">
         <div class="two-column__inner inner">
           <div class="two-column__article single-article">
             <article class="single-article__item single-body">
@@ -479,7 +479,7 @@
       </div>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -522,7 +522,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
