--- a/src/thanks.html
+++ b/src/thanks.html
@@ -210,7 +210,7 @@
       </div>
 
       <!-- 送信完了 -->
-      <div class="top-page-contact2 page-contact">
+      <div class="layout-page-contact2 page-contact">
         <div class="page-contact__inner inner">
           <div class="page-contact__content">
             <p class="page-contact__thanks-title">お問い合わせ内容を送信完了しました。</p>
@@ -227,7 +227,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer top-footer--thanks-page footer js-footer">
+    <footer class="layout-footer layout-footer--thanks-page footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
