--- a/src/error.html
+++ b/src/error.html
@@ -210,7 +210,7 @@
       </div>
 
       <!-- お問い合わせエラー -->
-       <div class="top-page-contact2 page-contact">
+       <div class="layout-page-contact2 page-contact">
         <div class="page-contact__inner inner">
           <div class="page-contact__content form">
             <div class="form__error-wrap">
@@ -281,7 +281,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer top-footer--contact-page footer js-footer">
+    <footer class="layout-footer layout-footer--contact-page footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
