--- a/src/home.html
+++ b/src/home.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- ブログ一覧 -->
-      <div class="top-two-column two-column">
+      <div class="layout-two-column two-column">
         <div class="two-column__inner inner">
           <div class="two-column__article column-article">
             <div class="column-article__items blog-cards blog-cards--2col">
@@ -589,7 +589,7 @@
       </div>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -632,7 +632,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
