--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
       </section>
 
       <!-- Campaign -->
-      <section class="top-campaign campaign">
+      <section class="layout-campaign campaign">
         <div class="campaign__inner inner">
           <div class="campaign__title section-header">
             <p class="section-header__engtitle">Campaign</p>
@@ -385,7 +385,7 @@
       </section>
 
       <!-- About -->
-      <section class="top-about about">
+      <section class="layout-about about">
         <div class="about__inner inner">
           <div class="about__title section-header">
             <p class="section-header__engtitle">About&nbsp;us</p>
@@ -416,7 +416,7 @@
       </section>
 
       <!-- Information -->
-      <section class="top-information information">
+      <section class="layout-information information">
         <div class="information__inner inner">
           <div class="information__title section-header">
             <p class="section-header__engtitle">Information</p>
@@ -441,7 +441,7 @@
       </section>
 
       <!-- Blog -->
-      <section class="top-blog blog">
+      <section class="layout-blog blog">
         <div class="blog__inner inner">
           <div class="blog__title section-header">
             <p class="section-header__engtitle section-header__engtitle--white-pc">Blog</p>
@@ -495,7 +495,7 @@
       </section>
 
       <!-- Voice -->
-      <section class="top-voice voice">
+      <section class="layout-voice voice">
         <div class="voice__inner inner">
           <div class="voice__title section-header">
             <p class="section-header__engtitle voice__title-en">Voice</p>
@@ -550,7 +550,7 @@
       </section>
 
       <!-- Price -->
-      <section class="top-price price">
+      <section class="layout-price price">
         <div class="price__inner inner">
           <div class="price__title section-header">
             <p class="section-header__engtitle">Price</p>
@@ -647,7 +647,7 @@
       </section>
 
       <!-- Contact -->
-      <section class="top-contact contact">
+      <section class="layout-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -690,7 +690,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
