--- a/src/page-contact.html
+++ b/src/page-contact.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- お問い合わせ -->
-       <div class="top-page-contact2 page-contact">
+       <div class="layout-page-contact2 page-contact">
         <div class="page-contact__inner inner">
           <div class="page-contact__content form">
             <!-- <p class="form__error" id="form__error"></p> -->
@@ -276,7 +276,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer top-footer--contact-page footer js-footer">
+    <footer class="layout-footer layout-footer--contact-page footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
