--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- よくある質問 -->
-      <div class="top-page-faq page-faq">
+      <div class="layout-page-faq page-faq">
         <div class="page-faq__inner inner">
           <div class="page-faq__accordion accordion">
             <div class="accordion__container">
@@ -273,7 +273,7 @@
       </div>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -316,7 +316,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
