--- a/src/page-information.html
+++ b/src/page-information.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- ダイビング情報 -->
-      <section class="top-page-information page-information">
+      <section class="layout-page-information page-information">
         <div class="page-information__inner inner">
           <div class="page-information__container tab">
             <ul class="tab__list">
@@ -258,7 +258,7 @@
       </section>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -301,7 +301,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
