--- a/src/page-price.html
+++ b/src/page-price.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- 料金一覧 -->
-      <section class="top-page-price page-price">
+      <section class="layout-page-price page-price">
         <div class="page-price__inner inner">
           <div class="page-price__table page-price-table">
             <div class="page-price-table__content">
@@ -291,7 +291,7 @@
       </section>
 
       <!-- Contact -->
-      <section class="top-page-contact contact">
+      <section class="layout-page-contact contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -334,7 +334,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
