--- a/src/page-privacy.html
+++ b/src/page-privacy.html
@@ -207,7 +207,7 @@
       </div>
 
       <!-- プライバシーポリシー -->
-      <section class="top-page-template page-template">
+      <section class="layout-page-template page-template">
         <div class="page-template__inner inner">
           <div class="page-template__title section-header">
             <h2 class="section-header__title">プライバシーポリシー</h2>
@@ -243,7 +243,7 @@
       </section>
 
       <!-- Contact -->
-      <section class="top-page-contact top-page-contact--privacy-page contact">
+      <section class="layout-page-contact layout-page-contact--privacy-page contact">
         <div class="contact__inner inner">
           <div class="contact__wrapper">
             <div class="contact__info">
@@ -286,7 +286,7 @@
     </main>
 
     <!-- フッター -->
-    <footer class="top-footer footer js-footer">
+    <footer class="layout-footer footer js-footer">
       <div class="footer__inner inner">
         <div class="footer__img">
           <div class="footer__logo">
