--- a/src/page-campaign.html
+++ b/src/page-campaign.html
@@ -234,7 +234,7 @@
                     <p class="campaign-card__information-period">2023/6/1-9/30</p>
                     <p class="campaign-card__information-inquiry">ご予約・お問い合わせはコチラ</p>
                     <div class="campaign-card__btn campaign-card__btn--sub-page u-desktop">
-                      <a href="#" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
+                      <a href="#" class="button"><span class="button__text">View&nbsp;more</span></a>
                     </div>
                   </div>
                 </div>
@@ -258,7 +258,7 @@
                     <p class="campaign-card__information-period">2023/6/1-9/30</p>
                     <p class="campaign-card__information-inquiry">ご予約・お問い合わせはコチラ</p>
                     <div class="campaign-card__btn campaign-card__btn--sub-page u-desktop">
-                      <a href="#" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
+                      <a href="#" class="button"><span class="button__text">View&nbsp;more</span></a>
                     </div>
                   </div>
                 </div>
@@ -282,7 +282,7 @@
                     <p class="campaign-card__information-period">2023/6/1-9/30</p>
                     <p class="campaign-card__information-inquiry">ご予約・お問い合わせはコチラ</p>
                     <div class="campaign-card__btn campaign-card__btn--sub-page u-desktop">
-                      <a href="#" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
+                      <a href="#" class="button"><span class="button__text">View&nbsp;more</span></a>
                     </div>
                   </div>
                 </div>
@@ -306,7 +306,7 @@
                     <p class="campaign-card__information-period">2023/6/1-9/30</p>
                     <p class="campaign-card__information-inquiry">ご予約・お問い合わせはコチラ</p>
                     <div class="campaign-card__btn campaign-card__btn--sub-page u-desktop">
-                      <a href="#" class="button" role="button"><span class="button__text">View&nbsp;more</span></a>
+                      <a href="#" class="button"><span class="button__text">View&nbsp;more</span></a>
                     </div>
                   </div>
                 </div>
@@ -359,7 +359,7 @@
               </div>
               <p class="contact__text">ご予約・お問い合わせはコチラ</p>
               <div class="contact__btn">
-                <a href="./page-contact.html" class="button" role="button"><span class="button__text">Contact&nbsp;us</span></a>
+                <a href="./page-contact.html" class="button"><span class="button__text">Contact&nbsp;us</span></a>
               </div>
             </div>
           </div>
